third page of poroperty was made

--- a/shop.html
+++ b/shop.html
@@ -105,6 +105,7 @@
 							<p class="item-price montserrat-regular">$16.60</p>
 						</div>
 					</div>
+				</div>
 			</section>
 		</div>
 	</div>
