--- a/tablet.html
+++ b/tablet.html
@@ -13,7 +13,7 @@
 	<div class="wrapper">
 		<div class="tablet">
 			<div class="tablet-screen">
-				<section class="main-page">
+				<section class="report-page">
 					<div class="tablet-top">
 						<p class="tablet-time montserrat-extra-light">19:48</p>
 						<div class="tablet-wifi">
@@ -25,14 +25,9 @@
 							<i class="fa fa-battery"></i>
 						</div>
 					</div>
-					<h2 class="table-date text-white text-center montserrat-extra-light">15 may 2020</h2>
-					<div class="main-apps">
-						<i class="fa fa-home"></i>
-						<i class="fa fa-shopping-bag"></i>
-						<i class="fa fa-shopping-cart"></i>
-						<i class="fa fa-users"></i>
-						<i class="fa fa-gear"></i>
-					</div>
+					<a href="#" class="top-property-direction text-white montserrat-regular">
+						<i class="fa fa-angle-left"></i> Вернуться назад
+					</a>
 				</section>
 			</div>
 		</div>
