all pages of tablet were made

--- a/tablet-pages.html
+++ b/tablet-pages.html
@@ -362,12 +362,239 @@
 		</div>
 
 
+	</section>
 
-		
+
+	<section class="report-page">
+		<img src="./img/tablet-images/tablet-crosses.png" alt="report-crosses" class="report-crosses">
+		<div class="background-radial-theme"></div>
+
+
+		<div class="tablet-top">
+			<p class="tablet-time montserrat-extra-light">19:48</p>
+			<div class="tablet-wifi">
+				<i class="fa fa-signal"></i>
+				<p class="montserrat-extra-light">MegaCom</p>
+			</div>
+			<div class="tablet-battery">
+				<p class="montserrat-extra-light">100%</p>
+				<i class="fa fa-battery"></i>
+			</div>
+		</div>
+		<a href="#" class="top-property-direction text-white montserrat-regular">
+			<i class="fa fa-angle-left"></i> Вернуться назад
+		</a>
+
+
+
+		<aside class="aside-menu d-flex">
+			<a href="#" class="send-reports text-white montserrat-light aside-link-active">Отправить
+				репорт</a>
+			<a href="#" class="reports text-white montserrat-light">Репорты</a>
+			<div class="aside-menu-line"></div>
+		</aside>
+
+
+
+		<main class="send-report-block">
+			<h1 class="send-report-title text-white montserrat-medium text-center">
+				Отправить репорт
+			</h1>
+			<textarea class="send-report-text" placeholder="Введите причину жалобы"></textarea>
+			<button class="send-report-button montserrat-light">
+				Отправить
+			</button>
+		</main>
+
+
+		<main class="reports-list">
+			<h1 class="reports-list-title text-white montserrat-medium text-center">Список репортов</h1>
+			<div class="report-item d-flex justify-content-between">
+				<span class="report-item-id">Репорт #3156</span>
+				<div class="report-item-state">Открыт</div>
+			</div>
+			<div class="report-item d-flex justify-content-between">
+				<span class="report-item-id">Репорт #3154</span>
+				<div class="report-item-state">Закрыт</div>
+			</div>
+		</main>
+
+
+
+
+		<main class="chat-report">
+			<h1 class="chat-report-title text-white montserrat-medium text-center">
+				Диалог с администрацией
+			</h1>
+			<div class="chat-report-block">
+				<div class="chat-report-item">
+					<div class="montserrat-light d-flex align-items-center justify-content-between">
+						<span class="time">16:00</span>
+						<span class="name text-white">Viktor Savoilov</span>
+						<span class="status text-white citizen">Гражданин</span>
+					</div>
+					<span class="chat-report-text text-white montserrat-light">
+						У меня пропал скутер как быть?
+					</span>
+				</div>
+				<div class="chat-report-item ml-auto">
+					<div class="montserrat-light d-flex align-items-center justify-content-between">
+						<span class="time">16:05</span>
+						<span class="name text-white">Admin Adminov</span>
+						<span class="status text-white admin">Администратор</span>
+					</div>
+					<span class="chat-report-text text-white montserrat-light">
+						Cейчас помогу ожидайте...
+					</span>
+				</div>
+			</div>
+			<textarea class="chat-report-message montserrat-light" placeholder="Введите сообщение...">
+			</textarea>
+			<button class="send-report-button montserrat-light">
+				Отправить
+			</button>
+		</main>
+
+
 	</section>
 
 
 
+
+	<section class="fraction-page">
+		<img src="./img/tablet-images/tablet-crosses.png" alt="report-crosses" class="report-crosses">
+		<div class="background-radial-theme"></div>
+		<div class="tablet-top">
+			<p class="tablet-time montserrat-extra-light">19:48</p>
+			<div class="tablet-wifi">
+				<i class="fa fa-signal"></i>
+				<p class="montserrat-extra-light">MegaCom</p>
+			</div>
+			<div class="tablet-battery">
+				<p class="montserrat-extra-light">100%</p>
+				<i class="fa fa-battery"></i>
+			</div>
+		</div>
+		<a href="#" class="top-property-direction text-white montserrat-regular">
+			<i class="fa fa-angle-left"></i> Вернуться назад
+		</a>
+		<h1 class="fraction-title text-white montserrat-light">
+			Фракция <span class="montserrat-medium">LSSD</span>
+		</h1>
+		<aside class="aside-menu d-flex">
+			<a href="#" class="send-reports text-white montserrat-light aside-link-active">Казна</a>
+			<a href="#" class="reports text-white montserrat-light">Состав</a>
+			<a href="#" class="reports text-white montserrat-light">Оповещение</a>
+			<a href="#" class="reports text-white montserrat-light">Вызовы</a>
+			<div class="aside-menu-line"></div>
+		</aside>
+
+
+
+		<main class="coffers-page">
+			<h1 class="coffers-title montserrat-medium text-white">
+				Казна 100.000$
+			</h1>
+			<p class="coffers-value text-white montserrat-medium text-center">5000</p>
+			<div class="coffers-buttons d-flex justify-content-between">
+				<button class="coffers-button text-white montserrat-light">Пополнить</button>
+				<button class="coffers-button text-white montserrat-light">Снять</button>
+			</div>
+		</main>
+
+
+
+		<main class="range-page d-flex justify-content-between">
+			<div class="range-block">
+				<div class="range-titles d-flex align-items-center justify-content-between">
+					<span class="text-white montserrat-light">Имя</span>
+					<span class="text-white montserrat-light">Ранг</span>
+				</div>
+				<div class="range-list">
+					<div
+						class="range-item range-item-active text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+					<div
+						class="range-item text-white montserrat-light d-flex align-items-center justify-content-between">
+						<span>Mihail Zaharov</span>
+						<span>14</span>
+					</div>
+				</div>
+			</div>
+			<div class="modify-range">
+				<h1 class="range-title text-white montserrat-light">Изменить ранг</h1>
+				<div class="range-changing d-flex justify-content-between">
+					<button class="range-change text-white montserrat-light">- Ранг</button>
+					<button class="range-change text-white montserrat-light">+ Ранг</button>
+				</div>
+				<div class="modify-buttons">
+					<button class="modify-button text-white montserrat-light">Выдать награду</button>
+					<button class="modify-button text-white montserrat-light">Выгнать</button>
+					<button class="modify-button text-white montserrat-light">Оффлайн игроки</button>
+				</div>
+			</div>
+
+
+			<main class="alert-page">
+				<h1 class="alert-title text-white montserrat-medium text-center">Оповестить подразделение</h1>
+				<textarea class="alert-text text-white montserrat-light">У нас ЧП срочно приехать в наш округ Блэйн для дальнейшего, разберательства.
+				</textarea>
+				<button class="notify-button montserrat-light text-white">Оповестить</button>
+			</main>
+		</main>
+	</section>
 
 
 </body>
